# prison-api

./: main.py  pyproject.toml  settings.py
models/: user.py
web/static/: style.css
web/static/scripts/: get_cigarettes.js  open_cigarettes.js
web/templates/: index.html
