[tool.poetry]
name = "tg-prison"
version = "0.1.0"
description = ""
authors = ["Dmitry Telegin, Max Ryabox"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
uvicorn = "^0.30.0"
fastapi = "^0.111.0"
tortoise-orm = "^0.21.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
